fixed issues with some our content not existing within the flow of the document (was causing elements to overflow into each other)

--- a/website/css/main-compiled.css
+++ b/website/css/main-compiled.css
@@ -17,9 +17,9 @@
   width: 100%;
 }
 
-.spacer-lg {
-  margin-top: 15vh;
-  margin-bottom: 15vh;
+.spacer-xl {
+  margin-top: 30vh;
+  margin-bottom: 30vh;
   width: 100%;
 }
 
@@ -88,8 +88,12 @@ header {
   event info. */
 }
 .landing .holder {
-  padding-top: 20%;
-  height: 100%;
+  padding-top: 22%;
+}
+@media screen and (max-width: 1024px) {
+  .landing .holder {
+    padding-top: 25%;
+  }
 }
 @media screen and (max-width: 1200px) {
   .landing .holder {
@@ -111,9 +115,9 @@ header {
   font-size: 1em;
   max-font-size: 2em;
 }
-@media (max-width: 90em) {
+@media (max-width: 70em) {
   .landing .header-text, .landing body .section-header .faq-header, body .section-header .landing .faq-header {
-    font-size: 0.9em;
+    font-size: 0.7em;
   }
 }
 @media (min-width: 150em) {
@@ -204,29 +208,37 @@ header {
     margin-top: 0;
   }
 }
-.landing .cloud-1 {
+.landing .header-graphic {
+  display: block;
+}
+.landing .header-graphic .cloud-1 {
   width: 30%;
+  height: auto;
   position: absolute;
   top: -5vh;
   left: 30%;
   z-index: 100;
 }
-.landing .cloud-2 {
+.landing .header-graphic .cloud-2 {
   width: 30%;
+  height: auto;
   position: absolute;
   top: 15vh;
   right: 8%;
   z-index: 300;
 }
-.landing .cloud-3 {
+.landing .header-graphic .cloud-3 {
   width: 18%;
+  height: auto;
   position: absolute;
-  top: 20vh;
+  top: 25vh;
   left: 15%;
   z-index: 300;
 }
-.landing .mountain {
-  height: 100%;
+.landing .header-graphic .mountain {
+  position: relative;
+  top: 0px;
+  margin: auto;
   width: 100%;
   padding-right: 5%;
   z-index: 200;
@@ -240,12 +252,15 @@ header {
 #about .header-text, #about body .section-header .faq-header, body .section-header #about .faq-header {
   color: #424242;
 }
+#about .section-header {
+  text-align: left;
+  margin: 0%;
+}
 #about p, #about #footer a, #footer #about a {
   font-family: "Lato", sans-serif;
   font-size: 3vh;
   font-weight: 100;
   text-align: left;
-  padding: 10px;
   padding-top: 5vh;
   line-height: 200%;
   color: #424242;
@@ -260,7 +275,7 @@ header {
 }
 
 .header-bar, .faq-bar, .about-bar {
-  margin: 0px 30%;
+  width: 30%;
   height: 5px;
 }
 
