--- a/website/scss/main.scss
+++ b/website/scss/main.scss
@@ -14,6 +14,10 @@ $orange-secondary: #C94331;
 $gray: #333333;
 $mountain-blue: #297284;
 
+$laptop-lg: 1440px;
+$laptop: 1024px;
+$tablet: 768px;
+$mobile: 576px;
 $break-small: 576px;
 $break-medium: 768px;
 $break-large: 1200px;
@@ -82,9 +86,9 @@ $break-large: 1200px;
   margin-bottom: 5vh; 
   width: 100%;
 }
-.spacer-lg {
-  margin-top: 15vh;
-  margin-bottom: 15vh; 
+.spacer-xl {
+  margin-top: 30vh;
+  margin-bottom: 30vh; 
   width: 100%;
 }
 
@@ -151,8 +155,10 @@ header {
 
 .landing {
   .holder {
-    padding-top: 20%;
-    height:      100%;
+    padding-top: 22%;
+    @media screen and (max-width: $laptop){
+      padding-top: 25%; 
+    }
     @media screen and (max-width: $break-large) {
       height: auto;
     }
@@ -169,7 +175,7 @@ header {
 
   .header-text {
     font-family:   $font-stack-tertiary;
-    @include responsive-font(1em, .9em, 1.5em, 1em);
+    @include responsive-font(1em, .7em, 1.5em, 1em);
     max-font-size: 2em;
 
     p {
@@ -259,33 +265,44 @@ header {
       margin-top: 0;
     }
   }
-  .cloud-1 {
-    width:    30%;
-    position: absolute;
-    top:      -5vh;
-    left:     30%;
-    z-index: 100;
+
+  .header-graphic {
+    display: block;
+    .cloud-1 {
+      width:    30%;
+      height: auto;
+      position: absolute;
+      top:      -5vh;
+      left:     30%;
+      z-index: 100;
+    }
+    .cloud-2 {
+      width:    30%;
+      height: auto;
+      position: absolute;
+      top:      15vh;
+      right:    8%;
+      z-index: 300;
+    }
+    .cloud-3 {
+      width:    18%;
+      height: auto;
+      position: absolute;
+      top:      25vh;
+      left:     15%;
+      z-index: 300;
+    }
+    .mountain {
+      position: relative;
+      top: 0px;
+      margin: auto;
+      width: 100%;
+      padding-right: 5%;
+      z-index: 200;
+    }
+
   }
-  .cloud-2 {
-    width:    30%;
-    position: absolute;
-    top:      15vh;
-    right:    8%;
-    z-index: 300;
-  }
-  .cloud-3 {
-    width:    18%;
-    position: absolute;
-    top:      20vh;
-    left:     15%;
-    z-index: 300;
-  }
-  .mountain {
-    height: 100%;
-    width: 100%;
-    padding-right: 5%;
-    z-index: 200;
-  }
+  
 }
 
 #about {
@@ -296,12 +313,15 @@ header {
   .header-text {
     color: #424242;
   }
+  .section-header {
+    text-align: left;
+    margin: 0%;
+  }
   p {
     font-family: 'Lato', sans-serif;
     font-size:   3vh;
     font-weight: 100;
     text-align:  left;
-    padding:     10px;
     padding-top: 5vh;
     line-height: 200%;
     color: #424242;
@@ -318,7 +338,7 @@ header {
 }
 
 .header-bar {
-  margin: 0px 30%;
+  width: 30%;
   height: 5px;
 }
 
